<resources>
    <string name="app_name">Sky Watch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sky_watch">SkyWatchActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_alert">Alert</string>
    <string name="daily">Daily</string>


    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_setting">Setting</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="sunset">Sunset:</string>
    <string name="sunrise">Sunrise:</string>
    <string name="degree" translatable="false">°</string>
    <string name="hourly">Hourly</string>
    <string name="weekly">Weekly</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="ultraviolet">Ultraviolet</string>
    <string name="visibility">Visibility</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="today">Today</string>
    <string name="now">Now</string>
    <string name="meter_per_second">" Meter / Sec"</string>
    <string name="mile_per_hour">"Mile / Hour"</string>
    <string name="arabic">Arabic</string>
    <string name="english">English (UK)</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="notification">Notification</string>
    <string name="language">Language</string>
    <string name="location">Location</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind speed</string>
    <string name="m">" m"</string>
    <string name="hpa">" hPa"</string>
    <string name="c_symbol" translatable="false"><sup>°C</sup></string>
    <string name="k_symbol" translatable="false"><sup>°K</sup></string>
    <string name="f_symbol" translatable="false"><sup>°F</sup></string>
    <string name="no_favorites_yet">No favorites places yet</string>
    <string name="save_location_to_fav">Save to favorite</string>
    <string name="internet_connection_is_lost">Internet Connection is lost</string>
    <string name="network_is_restored">Network is Restored</string>
    <string name="refresh">Refresh</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="check_your_connection">Check your connection, then refresh the page.</string>
    <string name="no_alarms_yet">No alarms yet</string>
    <string name="dash">-</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="save">Save</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="alarm">Alarm</string>
    <string name="weather_alert">Weather Alert</string>
    <string name="weather_is_fine_alert">Weather is fine. no alerts for the schedule time period in %1$s</string>
    <string name="dismiss">DISMISS</string>
    <string name="intial_setup">Initial Setup</string>
    <string name="save_location">Save location</string>
    <string name="please_choose_loc_first">Please choose location first</string>
    <string name="The_alarm_may_be_not_work_as_expected">The alarm may be not work as expected, please enable display over other app</string>
    <string name="unfortunately_the_display_over_other_apps_permission_is_not_granted">Unfortunately the display over other apps permission is not granted so the application might not behave properly</string>
    <string name="please_allow_draw_over_apps_permission">please allow Draw Over Apps permission to be able to use application properly</string>
    <string name="permission_request">Permission request</string>
    <string name="location_request">Location request</string>
    <string name="warning">Warning</string>
    <string name="choose_your_current_location">Choose your current location</string>
    <string name="choose_loc">Choose Location</string>
    <string name="choose_the_alert_loc">Choose the alert location</string>
    <string name="assure_deleting">Are you sure you want to delete</string>
    <string name="please_enable_loc">Please enable location to get correct Results</string>
    <string name="enable">Enable</string>
    <string name="Unfortunately_the_location_is_disabled">Unfortunately the location is disabled so the application might not behave properly</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="we_can_t_fetch_your_location">We can\'t fetch your location</string>
    <string name="allow">Allow</string>
    <string name="please_allow_weather_to_access_your_location">please allow Weather to access your location</string>
    <string name="Unfortunately_no_network_connection_loc_from_map">Unfortunately no network connection so you can\'t get location from map</string>
    <string name="faild_load_data">"Can't Loading Weather "</string>
    <string name="try_again">Try Again</string>
    <string name="del_item">Delete</string>
    <string name="ask_del_fav">Are You Sure To Delete this Location</string>
    <string name="notification_permmission_desc">This app requires notification permission to function properly</string>
    <string name="notification_permission_title">Notification Permission Required</string>
    <string name="german">German</string>
    <string name="disable">Disable</string>
</resources>