<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.ui.settings.views.SettingsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <androidx.constraintlayout.widget.Group
            android:id="@+id/settingsViewsGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="
                locationGroup,
                languageGroup,
                tempGroup,
                windGroup,
                notificationGroup"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8"
                    android:layout_margin="16dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="32dp"
                        android:src="@drawable/marker"
                        android:layout_margin="4dp"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="6"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textSize="16dp"
                        />
                    <ImageView
                        android:id="@+id/icLocationShowMore"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_show_more"
                        />
                </LinearLayout>
                <RadioGroup
                    android:id="@+id/locationGroup"
                    android:layout_marginHorizontal="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioLocationGPs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gps" />
                    <RadioButton
                        android:id="@+id/radioLocationMap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map" />
                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8"
                    android:layout_margin="16dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_margin="4dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="32dp"
                        android:src="@drawable/translate"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="6"
                        android:layout_height="wrap_content"
                        android:text="@string/language"
                        android:textSize="16dp"
                        />
                    <ImageView
                        android:id="@+id/icLanguageShowMore"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_show_more"
                        />
                </LinearLayout>
                <RadioGroup
                    android:id="@+id/languageGroup"
                    android:layout_marginHorizontal="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioLanguageEnglish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/english" />
                    <RadioButton
                        android:id="@+id/radioLanguageArabic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/arabic" />
                    <RadioButton
                        android:id="@+id/radioLanguageGerman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/german" />
                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8"
                    android:gravity="center"
                    android:layout_margin="16dp"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_margin="4dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="32dp"
                        android:src="@drawable/temperatures"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="6"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature"
                        android:textSize="16dp"
                        />
                    <ImageView
                        android:id="@+id/icTempShowMore"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_show_more"
                        />
                </LinearLayout>
                <RadioGroup
                    android:layout_marginHorizontal="32dp"
                    android:id="@+id/tempGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioTempCelsius"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/celsius" />
                    <RadioButton
                        android:id="@+id/radioTempKelvin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kelvin" />
                    <RadioButton
                        android:id="@+id/radioTempFahrenheit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fahrenheit" />
                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8"
                    android:gravity="center"
                    android:layout_margin="16dp"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="32dp"
                        android:src="@drawable/wind"
                        android:layout_margin="4dp"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="6"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_speed"
                        android:textSize="16dp"
                        />
                    <ImageView
                        android:id="@+id/icWindShowMore"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_show_more"
                        />
                </LinearLayout>
                <RadioGroup
                    android:layout_marginHorizontal="32dp"
                    android:id="@+id/windGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioWindMeter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meter_per_second" />
                    <RadioButton
                        android:id="@+id/radioWindMile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mile_per_hour" />
                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="8"
                    android:gravity="center"
                    android:layout_margin="16dp"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="32dp"
                        android:src="@drawable/notification"
                        android:layout_margin="4dp"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="6"
                        android:layout_height="wrap_content"
                        android:text="@string/notification"
                        android:textSize="16dp"
                        />
                    <ImageView
                        android:id="@+id/icNotifictionShowMore"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_show_more"
                        />
                </LinearLayout>
                <RadioGroup
                    android:layout_marginHorizontal="32dp"
                    android:id="@+id/notificationGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioEnable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enable" />
                    <RadioButton
                        android:id="@+id/radioDisable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/disable" />
                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>